data/manifests/docker-registry/docker-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      volumes:
      - name: docker-registry-volume
        persistentVolumeClaim:
          claimName: docker-registry-pvc
      - name: registry-credentials
        secret:
          secretName: registry-auth
          items:
            - key: htpasswd
              path: htpasswd
      containers:
      - name: registry
        image: registry:2.8.3
        ports:
        - containerPort: 5000
        volumeMounts:
          - mountPath: /var/lib/registry
            name: docker-registry-volume
          - mountPath: /auth
            name: registry-credentials
            readOnly: true

---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-sv
  namespace: docker-registry-ns
spec:
  type: NodePort
  selector:
    app: docker-registry
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30001
